--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "module": "ES2022",
+    "module": "Nodenext",
     "moduleResolution": "NodeNext",
     "target": "ES2022",
     "sourceMap": true,
