--- a/backend/package.json
+++ b/backend/package.json
@@ -6,14 +6,14 @@
   "type": "module",
   "scripts": {
     "dev": "concurrently \"npx tsc --watch\" \"nodemon -q dist/index.js\" ",
-    "build":"tsc",
+    "build": "tsc",
     "start": "node dist/index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "bcrypt": "^5.1.0", 
+    "bcrypt": "^5.1.0",
     "concurrently": "^8.2.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
@@ -22,7 +22,8 @@
     "express-validator": "^7.0.1",
     "jsonwebtoken": "^9.0.1",
     "mongoose": "^7.4.2",
-    "openai": "^3.3.0"
+    "morgan": "^1.10.1",
+    "openai": "^6.3.0"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
